people update and two lectures added without its notes and codes

--- a/dev/_data/people.yml
+++ b/dev/_data/people.yml
@@ -3,13 +3,15 @@ instructor:
   profile_pic: /_images/pp/inst.jpg
 
 teaching_assistants:
-  - name: Amirmohammad Kazemeinizade
+  - name: Amir Khakpour
     profile_pic: /_images/pp/avatar.jpg
+
+  - name: Amirmohammad Kazemeinizade
+    profile_pic: /_images/pp/ta01.jpg
 
   - name: Samin Fatehi
     profile_pic: /_images/pp/avatar.jpg
 
-  - name: Amir Khakpour
-    profile_pic: /_images/pp/avatar.jpg
+
 
 
