--- a/dev/_data/people.yml
+++ b/dev/_data/people.yml
@@ -6,7 +6,7 @@ teaching_assistants:
   - name: Amir Khakpour
     profile_pic: /_images/pp/avatar.jpg
 
-  - name: Amirmohammad Kazemeinizade
+  - name: Amir Mohammad Kazemeinizadeh
     profile_pic: /_images/pp/ta01.jpg
 
   - name: Samin Fatehi
