practical tab added but must add its material

--- a/dev/_config.yml
+++ b/dev/_config.yml
@@ -40,6 +40,8 @@ collections:
         output: true
     assignments:
         output: true
+    practical:
+        output: true
     announcements:
         output: false
 
