image of people updated

--- a/dev/_data/people.yml
+++ b/dev/_data/people.yml
@@ -4,13 +4,13 @@ instructor:
 
 teaching_assistants:
   - name: Amir Khakpour
-    profile_pic: /_images/pp/avatar.jpg
+    profile_pic: /_images/pp/ta03.jpg
 
   - name: Amir Mohammad Kazemeinizadeh
     profile_pic: /_images/pp/ta01.jpg
 
   - name: Samin Fatehi
-    profile_pic: /_images/pp/avatar.jpg
+    profile_pic: /_images/pp/ta02.jpg
 
 
 
